<resources>
    <string name="app_name">EasyFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_bargeld">Bargeld</string>

    <!--    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>-->

    <string name="settings_log_in">Angemeldet bleiben</string>
    <string name="settings_log_in_summary">Lege fest, ob ein neuer Login erfolgt, sobald die App erneut geöffnet wird.</string>
    <string name="settings_messages_os">Benachrichtigungen aktivieren</string>
    <string name="settings_messages_os_summary">Aktivieren, um Push-Benachrichtigungen zu erhalten.</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_dark_mode_summary">Ändere das Layoutdesing</string>
    <string name="settings_notification_options">Darstellung Benachrichtigungen</string>
    <string name="settings_notification_options_summary">Standardmäßig werden empfangene Benachrichtigungen angezeigt</string>

    <string name="menu_settings">Allgemeine Einstellungen</string>
    <string name="menu_show_group">Gruppe anzeigen</string>
    <string name="menu_settings_group">Gruppe verwalten</string>
    <string name="menu_show_cash">Bargeld anzeigen</string>
    <string name="menu_show_bank_account">Bankkonto anzeigen</string>
    <string name="menu_create_group">Gruppe erstellen</string>
    <string name="menu_edit_recurring_costs">Wiederkehrende Ausgaben</string>
    <string name="menu_show_notifications">Benachrichtigungen</string>

    <string name="income">Einnahme</string>
    <string name="cost">Ausgabe</string>
    <string name="new_income">Neue Einnahme</string>
    <string name="new_cost">Neue Ausgabe</string>
    <string name="new_notification">Neue Benachrichtigung</string>

    <string name="notifications_sent">Gesendet</string>
    <string name="notification_received">Empfangen</string>
    <string name="notification_confirmation">Bestätigungen</string>
    <string name="alert_dialog_confirm_notification">Wenn du die Benachrichtigung bestätigst, wir diese gelöscht und der Absender informiert. Fortfahren ?</string>
    <string name="alert_diaolg_confirm_notification_title">Bestätigung</string>
    <string name="text_recyclerView_from">Von:</string>
    <string name="text_recyclerView_note">Notiz:</string>
    <string name="button_confirm_text">bestätigen</string>


    <string name="kategorie">Kategorie</string>
    <string name="key_show_ein_or_ausgabe">KEY_SHOW_EIN_OR_AUSGABE</string>
    <string name="key_create_notification">KEY_CREATE_NOTIFICATION</string>
    <string name="category_reisen">Reisen</string>
    <string name="category_auto">Auto</string>
    <string name="category_verkehrsmittel">Verkehrsmittel</string>
    <string name="category_sport">Sport</string>
    <string name="category_geschenke">Geschenke</string>
    <string name="category_taxi">Taxi</string>
    <string name="category_haus">Haus</string>
    <string name="category_gesundheit">Gesundheit</string>
    <string name="category_lebensmittel">Lebensmittel</string>
    <string name="category_eating">Essen gehen</string>
    <string name="category_kommunikation">Kommunikation</string>
    <string name="category_einzahlungen">Einzahlungen</string>
    <string name="category_ersparnisse">Ersparnisse</string>
    <string name="category_gehalt">Gehalt</string>
    <string name="category_bildung">Bildung</string>
    <string name="category_unterhaltung">Unterhaltung</string>
    <string name="category_rechnungen">Rechnungen</string>
    <string name="category_kleidung">Kleidung</string>
    <string name="category_hygieneartikel">Hygieneartikel</string>
    <string name="category_haustiere">Haustiere</string>


    <string name="add_note_hint">Notiz hinzufügen</string>
    <string name="add_email_hint">Email eingeben</string>
    <string name="email_adresse">Email</string>
    <string name="passwort">Passwort</string>
    <string name="create_account">Account erstellen</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="actionbar_item_bargeld">Bargeld</string>
    <string name="actionbar_item_wg">WG</string>
    <string name="actionbar_item_bank">Bank</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_amount">Amount</string>
    <string name="ueberweisung_hinzufügen">Überweisung hinzufügen</string>
    <string name="konten_muessen_verschieden_sein">Konten müssen verschieden sein.</string>
    <string name="alertdialog_keine_gruppe_title">Keine Gruppe vorhanden</string>
    <string name="alertdialog_keine_gruppe_message">Du befindest dich noch nicht in einer Gruppe. Willst du eine Gruppe erstellen?</string>
    <string name="alertdialog_keine_gruppe_positive_button">Gruppe erstellen</string>
    <string name="alertdialog_keine_gruppe_negative_button">Abbrechen</string>
    <string name="alertdialog_keine_benachrichtigungen_title">Keine Nachrichten vorhanden</string>
    <string name="alertdialog_keine_benachrichtigungen_message">Du hast leider noch keine Nachrichten :(</string>
    <string name="alertdialog_keine_benachrichtigungen_negative_button">Zurück</string>
    <string name="alertdialog_keine_benachrichtigungen_positive_button">Benachrichtigung senden</string>
    <string name="guppe_bearbeiten">Guppe bearbeiten</string>
    <string name="ueberweisung">Überweisung</string>
    <string name="user_already_in_group">User befindet sich bereits in einer Gruppe.</string>
    <string name="invitation">Einladung</string>
    <string name="nein">Nein</string>
    <string name="ja">Ja</string>
    <string name="admin_role_text">Administrator</string>
    <string name="declined_role_text">Abgelehnt</string>
    <string name="pending_role_text">Antwort ausstehend</string>
    <string name="member_role_text">Mitglied</string>
    <string name="error_no_valid_email">Keine gültige Email Adresse.</string>
    <string name="login_successfull">Du wurdest erfolgreich angemeldet.</string>
    <string name="error_member_already_contains_email">Benutzer mit dieser Email Adresse befindet sich bereits in dieser Gruppe.</string>
    <string name="leave_group_button">Gruppe verlassen</string>
    <string name="user_removed_from_group">Mitglied wurde aus der Gruppe entfernt.</string>
    <string name="alert_delete_group_message">Willst du die Gruppe endgültig löschen?</string>
    <string name="alert_delete_group_title">Gruppe löschen</string>
    <string name="alert_leave_group_message">Willst du endgültig aus der Gruppe austreten?</string>
    <string name="alert_leave_group_title">Aus Gruppe austreten</string>
    <string name="message_group_removed_successfully">Gruppe wurde erfolgreich gelöscht.</string>
    <string name="messag_user_not_registered">Nutzer ist nicht angemeldet.</string>
    <string name="login_registrieren"> Registrieren</string>
    <string name="login_frage_kein_konto">Du hast kein Konto?</string>
    <string name="login_anmelden">Anmelden</string>
    <string name="login_frage_ein_konto">Du hast ein Konto?</string>
    <string name="no_data_available">Für diesen Zeitraum liegen noch keine Aufzeichnungen vor.</string>
    <string name="empty_recyclerView">Du hast noch keine Benachrichtigungen :(</string>
    <string name="delete">Löschen</string>
    <string name="confirm">Bestätigen</string>
    <string name="send">Benachrichtigung verfassen</string>
    <string name="snackbar_message_cost_deleted">Eintrag gelöscht.</string>
    <string name="msg_subscribed">Subscribed to topic</string>
    <string name="msg_subscribe_failed">Subscribing to topic failed</string>
    <string name="notification_channel_name">Easyflow Benachrichtigung</string>
    <string name="notification_channel_description">Benachrichtigung von Easyflow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
