<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_show_cash"
            android:icon="@drawable/ic_cash_new_black"
            android:title="@string/menu_show_cash"/>
        <item
            android:id="@+id/nav_show_bank_account"
            android:icon="@drawable/ic_bank_account_new_black"
            android:title="@string/menu_show_bank_account"/>
        <item
            android:id="@+id/nav_show_group"
            android:icon="@drawable/ic_group_black_32dp"
            android:title="@string/menu_show_group" />

        <item
            android:id="@+id/nav_show_notifications"
            android:icon="@drawable/ic_chat_bubble_outline_black_32dp"
            android:title="@string/menu_show_notifications"/>
    </group>

    <item android:title="Einstellungen">
        <menu>
            <item
                android:id="@+id/nav_edit_recurring_costs"
                android:icon="@drawable/ic_menu_recurring_costs"
                android:title="@string/menu_edit_recurring_costs" />
            <item
                android:id="@+id/nav_settings_group"
                android:icon="@drawable/ic_group_black_32dp"
                android:title="@string/menu_create_group" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
